RESOLVED FIXED115123
AX: aria-required is not exposed on all expected roles
https://bugs.webkit.org/show_bug.cgi?id=115123
Summary AX: aria-required is not exposed on all expected roles
Attachments
patch (8.59 KB, patch)
2013-06-19 02:51 PDT, James Craig
no flags
patch (8.63 KB, patch)
2013-06-19 03:03 PDT, James Craig
cfleizach: review-
patch (11.75 KB, patch)
2013-06-19 20:13 PDT, James Craig
no flags
Radar WebKit Bug Importer
Comment 1 2013-04-24 13:45:50 PDT
James Craig
Comment 4 2013-04-24 23:12:40 PDT
Test case #3, spinbutton (AXStepper) https://dvcs.w3.org/hg/pfwg/raw-file/default/ARIA/1.0/tests/test-files/roles-properties-supported/roles-properties-supported-spinbutton-aria-required-true.html Here's the list of roles where aria-required is supported: combobox columnheader gridcell listbox radiogroup rowheader spinbutton textbox tree treegrid
James Craig
Comment 5 2013-04-24 23:13:57 PDT
s/AXStepper/AXIncrementor/ (Note: VO calls it "stepper")
James Craig
Comment 6 2013-06-19 02:51:22 PDT
James Craig
Comment 7 2013-06-19 03:03:38 PDT
chris fleizach
Comment 8 2013-06-19 11:15:03 PDT
Comment on attachment 204981 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=204981&action=review > Source/WebCore/accessibility/mac/WebAccessibilityObjectWrapperMac.mm:1023 > + // required attr exposed on various HTML elements... These lines should be in the form of sentences. > Source/WebCore/accessibility/mac/WebAccessibilityObjectWrapperMac.mm:1033 > + || m_object->isTree() We should move this logic into a method like, supportsRequiredAttribute() We should also switch to using a switch statement on the role which will be baster switch (roleValue()) { case ComboBox: case Tree: …. }
James Craig
Comment 9 2013-06-19 20:13:32 PDT
WebKit Commit Bot
Comment 10 2013-06-20 09:08:30 PDT
Comment on attachment 205050 [details] patch Clearing flags on attachment: 205050 Committed r151776: <http://trac.webkit.org/changeset/151776>
WebKit Commit Bot
Comment 11 2013-06-20 09:08:33 PDT
All reviewed patches have been landed. Closing bug.
James Craig
Comment 12 2013-07-03 11:15:22 PDT
Follow-on work for tables/grid will be in bug 118364.
Note You need to log in before you can comment on or make changes to this bug.