AX: aria-required is not exposed on all expected roles https://bugs.webkit.org/show_bug.cgi?id=115123

Patch by James Craig <james@cookiecrook.com> on 2013-06-20
Reviewed by Chris Fleizach.

aria-required is now exposed on more roles. Updated existing test file.

Source/WebCore:

* accessibility/AccessibilityNodeObject.cpp:
(WebCore::AccessibilityNodeObject::supportsRequiredAttribute):
* accessibility/AccessibilityNodeObject.h:
* accessibility/AccessibilityObject.h:
(WebCore::AccessibilityObject::supportsRequiredAttribute):
* accessibility/mac/WebAccessibilityObjectWrapperMac.mm:
(-[WebAccessibilityObjectWrapper additionalAccessibilityAttributeNames]):

LayoutTests:

* platform/mac/accessibility/aria-required-expected.txt:
* platform/mac/accessibility/aria-required.html:
* platform/mac/accessibility/radio-button-group-members-expected.txt:

Canonical link: https://commits.webkit.org/135963@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@151776 268f45cc-cd09-0410-ab3c-d52691b4dbfc